# qa-first-playwright-pytest

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
config/: __init__.py  expectations.py  playwright.py  project_path.py  url.py
data/: __init__.py  assertions.py  data_for_tests.py  environment.py  generator.py  parametr_pairs.py
doc/: negative.md  positive.md
fixtures/: auth_page.py  logger.py  page.py
locators/: __init__.py  auth.py  products.py
pages/: __init__.py  base_page.py  burger_menu_products_page.py  login_page.py  market_product_page.py  market_sorting.py  product_page.py
tests/: test_burger_menu_product_page.py  test_check_badge_add_to_cart.py  test_index_page.py  test_login_page.py  test_market_sorting_name_a_to_z.py  test_product_page.py
